# rotema

./: CMakeLists.txt  package.xml
launch/: rotema.launch
scripts/: detectObject.py
src/: CameraCalibration.cpp  RobotNavigation.cpp  RobotPosition.cpp  RobotVelocityCommand.cpp
